--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     --accent-color: #43cea2;
     --light-text-color: #a8b2d1;
     --bg-color: #0a192f;
+    --backgroundcolor: rgba(7,5,8,255);
     --alt-bg-color: #0a192f;
     --dark-bg-color: #0a192f;
     --border-color: #ddd;
@@ -30,7 +31,7 @@
 }
 
 body {
-    background-color: var(--bg-color);
+    background-color: var(--backgroundcolor);
     color: var(--text-color);
     line-height: 1.6;
     overflow-x: hidden;
